[tool.poetry]
name = "barcaza"
version = "0.1.0"
description = "Simple Raft consensus algorithm implementation."
authors = ["CrossNox <ijmermet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
zmq = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
